footer overflow fix

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -40,10 +40,14 @@
   font-family: "Comfortaa", "cursive";
   font-weight: 500;
   line-height: 1.2;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 .email-link:hover {
   text-decoration: none;
   color: #3CD3CC;
+}
+
+.footer-copyright {
+  overflow: scroll;
 }
